--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.h2.console.enabled=true
-spring.h2.console.path=/console
+spring.h2.console.path=/h2
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.name=PEOPLE
+spring.datasource.url=jdbc:h2:mem:testdb;
+
